# marksmith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: PUBLISHING.md  TAURI.md  TODO.md  architecture.md  index.html  showcase-content.md  showcase.css  showcase.js
e2e/: app-features.spec.ts  split-scroll.spec.ts
e2e/fixtures/: open-me.html  open-me.md  yaml-brief.md
scripts/: capture-showcase.mjs  generate-tauri-icon.mjs
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppProvider.tsx  appState.ts  installAppHelp.ts  keyboardShortcuts.ts  keyboardShortcutsHelp.ts  useAppKeyboardShortcuts.ts  useInstallPrompt.ts
src/documents/: autosave.ts  clipboard.ts  desktopFileAccess.ts  documentPreferences.ts  draftSnapshot.ts  exportDocument.ts  fileAccess.ts  linkedFileFormat.ts  recentDocuments.ts
src/editor/: CompareEditor.tsx  EditorModePanel.tsx  FormattingToolbar.tsx  HtmlEditor.tsx  HtmlSourceEditor.tsx  HybridEditor.tsx  PreviewPane.tsx  RawEditor.tsx  SplitEditor.tsx  appKeymap.ts  compareDiff.ts  comparePreferences.ts  editorCommands.ts  editorModes.ts  editorTheme.ts  htmlDiffDecorations.ts  hybridDecorations.ts  (+7 more)
(+64 files in other folders)
